--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "intern-one",
   "version": "0.1.0",
-  "homepage": "https://2000polo.github.io/Forem-intern/",
+  "homepage": "http://2000polo.github.io/Forem-intern",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
